--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                 <button type="submit" class="btn-cta">Enviar mensaje</button>
             </form>
             <div class="contacto-info">
-                <p><i class='bx bxs-phone'></i> +57 301 234 5678</p>
+                <p><i class='bx bxs-phone'></i> +57 320 7421258</p>
                 <p><i class='bx bxs-envelope'></i> info@servihome.com</p>
-                <p><i class='bx bxs-map'></i> Calle Principal #123, Ciudad</p>
-                <a href="https://wa.me/+573012345678" target="_blank" class="btn-whatsapp">
+                <p><i class='bx bxs-map'></i>Cra. 5 #14-1, Valledupar, Cesar</p>
+                <a href="https://wa.me/+573207421258" target="_blank" class="btn-whatsapp">
                     <i class='bx bxl-whatsapp'></i> Contáctanos por WhatsApp
                 </a>
             </div>
