--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                 <h3>Arreglo de Ventanas</h3>
                 <p>Reparación de marcos, cristales y sistemas de cierre. Aseguramos que tus ventanas sean seguras y eficientes, mejorando la estética de tu hogar.</p>
             </div>
+            <div class="ver-mas-container">
+                <a href="servicios.html" class="ver-mas">Ver Más</a>
+            </div>
         </div>
     </section>
 
