--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="map-container">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3923.2738891817453!2d-73.24739372515933!3d10.479061764608703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e8ab9b3a31a7de9%3A0x41e27364672bef1f!2sUniversidad%20de%20Santander!5e0!3m2!1ses-419!2sco!4v1731536290742!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <form id="contactForm">
+            <form id="contactForm" action="https://formspree.io/f/myzyjlgk" method="post" id="form" name="form">
                 <input type="text" name="nombre" placeholder="Nombre" required>
                 <input type="email" name="email" placeholder="Correo electrónico" required>
                 <input type="tel" name="telefono" placeholder="Teléfono" required>
